# opencv_logger

./: CMakeLists.txt  README.md
include/: Logger.h
src/: Logger.cpp
